# veri-kalitesi-sistemi

./: .gitignore  AGENTS.md  CODEX-KULLANIM.md  README.md  pyproject.toml
00-Proje-Hafizasi/: Acik-Konular.md  Alinan-Kararlar.md  Bankacilik-Gecis-Durumu.md  Mevcut-Durum.md  Proje-Ozeti.md  Sonraki-Adimlar.md
01-SRS/: 00-Dokuman-Kunyesi.md  01-Amac-ve-Kapsam.md  02-Sistem-Aciklamasi.md  03-Is-Gereksinimleri.md  06-Is-Kurallari.md  08-Harici-Arayuzler.md  10-Kabul-Kriterleri.md  11-Izlenebilirlik-Matrisi.md  12-MVP.md  13-Riskler.md  14-Sistem-Evrimi.md  15-Acik-Konular.md  16-Kalite-Kontrolu.md  SRS-INDEX.md
02-Mimari/: Kanita-Dayali-Karar-Sistemi.md  MIMARI-INDEX.md  Mantiksal-Mimari.md  Mimari-Kararlar.md  Sentetik-Veri-ve-Gizlilik-Stratejisi.md  Sistem-Baglami.md  Veri-Kalitesi-Skorlama-ve-Olcum-Yeterliligi.md
03-Backend/: BACKEND-INDEX.md
04-Frontend/: AGENTS.md  FRONTEND-INDEX.md  Gorsel-Tasarim-Sistemi.md
05-Veritabani/: SQLite-Kaliclilik-Envanteri.md  VERITABANI-INDEX.md  alembic.ini
06-Testler/: AGENTS.md  TEST-INDEX.md
07-Operasyon/: Kanita-Dayali-Karar-ve-Remediation-Runbook.md  OPERASYON-INDEX.md  Olay-Mudahale-ve-KVKK-Ihlal.md  Saklama-Imha-ve-Legal-Hold-Runbook.md  ServiceNow-Entegrasyon-Runbook.md  Surum-ve-Degisiklik-Yonetimi.md  Yedekleme-Geri-Yukleme-ve-DR.md  Yetki-Gozden-Gecirme-ve-PAM.md
08-Uyum-Kanitlari/: KANIT-INDEX.md  Kanıt-Paketi-Sablonu.md
09-Iterasyonlar/: AGENTS.md  Bakim-Iterasyonu-29C1-Tam-Depo-Tip-Kontrolu.md  ITERASYON-INDEX.md  Iterasyon-16-Guvenilir-Aktor-Baglami.md  Iterasyon-17-Merkezi-Audit-Butunlugu.md  (+24 more)
(+461 files in other folders)
