[project]
name = "veri-kalitesi-sistemi"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.18.4",
    "fastapi==0.135.3",
    "packaging==26.0",
    "psycopg==3.3.4",
    "psycopg-binary==3.3.4",
    "SQLAlchemy==2.0.51",
    "tomli==2.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["03-Backend/src"]
testpaths = ["06-Testler"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
